--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			}
 		</style>
 	</head>
-		<body class="md:bg-slate-700"></body>
+		<body class="md:bg-gray-500"></body>
 		<div id="root" class="flex justify-center"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
