put all store files in store

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 		<title>Easy-Peasy Showcase</title>
 		<style>
 			body {
-				background-color: #94a3b8;
+				background-color: #9ca3af;
 			}
 		</style>
 	</head>
-		<body class="md:bg-gray-500"></body>
+		<body class=" bg-gray-400 md:bg-gray-500"></body>
 		<div id="root" class="flex justify-center"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
