--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Easy-Peasy Showcase</title>
+		<title>New-Tech Showcase</title>
 		<style>
 			body {
 				background-color: #9ca3af;
